# PARC-2024-SUBMISSION-

./: README.md
install/: local_setup.sh  setup.sh
install/farmland_navigation/lib/farmland_navigation/: roi  task1_solution
install/farmland_navigation/share/farmland_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/parc_robot/share/parc_robot/: package.sh
install/parc_robot_bringup/share/parc_robot_bringup/: package.sh
install/parc_robot_description/share/parc_robot_description/: local_setup.sh  package.sh
install/parc_robot_interfaces/share/parc_robot_interfaces/: local_setup.sh  package.sh
install/tomatoes_detection1/lib/tomatoes_detection1/: detect_tomatoes  move_robot  task2_solution
install/tomatoes_detection1/share/tomatoes_detection1/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/: README.md
src/farmland_navigation/: README.md  package.xml  setup.cfg  setup.py
src/farmland_navigation/farmland_navigation/: practice2.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/parc_robot/share/parc_robot/: local_setup.sh  package.sh
src/install/parc_robot_bringup/share/parc_robot_bringup/: local_setup.sh  package.sh
src/install/parc_robot_description/share/parc_robot_description/: local_setup.sh  package.sh
src/log/: latest_build
src/parc_robot_bringup/: CMakeLists.txt
src/tomatoes_detection1/: README.md  setup.py
src/tomatoes_detection1/config/: tomato.yaml
(+116 files in other folders)
